fix :: auth